# web-server

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  webserver.cpp  webserver.h
qt_test/: main.cpp  mainwindow.cpp  mainwindow.h
test/: index.html
www/: index.html
